Creating a file_server capability

--- a/website/apps/homepage/templates/about.html
+++ b/website/apps/homepage/templates/about.html
@@ -5,6 +5,8 @@
 {% endblock title %}
 
 {% block content %}
+    <img src="{{ STATIC_URL }}img/download.jpg" alt="">
+    
     <h1>{{ page_title }} </h1>
     <p>About </p>
 {% endblock content %}
