--- a/site/apps/home/templates/home.html
+++ b/site/apps/home/templates/home.html
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Home page
-    
-    <form action="" method="POST">
-        <input type="text" name="name" id="name">
-        <button type="submit">Save</button>
-    </form>
+{% extends 'base.html' %}
 
-    <img src="{{ STATIC_URL }}Wallpaper1.png" alt="" width="150px" height="150px">
-    <br>
-    <ul>
-        {% for user in users %}
-            {% if user.id == 1 %}
-                <b><li>{{ user.id }}: {{ user.name }}</li></b>
-            {% else %}
-                <li>{{ user.id }}: {{ user.name }}</li>
-            {% endif %}
-
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% block content %}
+	<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+		<div class="content">
+			<h1>Story</h1>
+			<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+			<ul class="actions stacked">
+				<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+			</ul>
+		</div>
+		<div class="image">
+			<img src="{{ STATIC_URL }}images/banner.jpg" alt="" />
+		</div>
+	</section>
+{% endblock %}
