--- a/site/apps/home/templates/confirmation.html
+++ b/site/apps/home/templates/confirmation.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>{{ name }} cadastrado com sucesso</h1>
-    <a href="/">Voltar</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+	<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+		<div class="content">
+            <h1>{{ name }} cadastrado com sucesso</h1>
+            <a href="/">Voltar</a>
+        </div>
+    </section>
+{% endblock %}
