--- a/site/apps/home/templates/home.html
+++ b/site/apps/home/templates/home.html
@@ -14,7 +14,10 @@
 
             <h2>Adicionar novo</h2>
             <form method="POST">
+                <label>Name</label>
                 <input type="text" name="name" id="name"><br>
+                <label>Address</label>
+                <input type="text" name="address" id="address"><br>
                 <button type="submit">Save</button> 
             </form>
 		</div>
